argocd/app-configs/authentik/whoami.yaml
# Traefik Whoami Deployment and Ingress Route
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  namespace: authentik
  labels:
    app.kubernetes.io/name: whoami
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: whoami
  template:
    metadata:
      labels:
        app.kubernetes.io/name: whoami
    spec:
      containers:
        - name: whoami
          image: traefik/whoami:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: authentik
spec:
  selector:
    app.kubernetes.io/name: whoami
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: authentik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`whoami.k8s.fzymgc.house`)
      kind: Rule
      middlewares:
        - name: modern-auth
          namespace: authentik
      services:
        - name: whoami
          port: 80
    - match: Host(`auth.whoami.k8s.fzymgc.house`)
      kind: Rule
      middlewares:
        - name: modern-auth
          namespace: authentik
      services:
        - name: whoami
          port: 80
  tls:
    secretName: whoami-tls
